log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 02:42:14 PM UTC: 
 tests:  0|6
total_score: 0/70
fb8050b
Thu 30 Mar 2023 02:49:55 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
5005b57
Thu 30 Mar 2023 02:53:17 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
2224bcd
Thu 30 Mar 2023 02:59:47 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
bcf5c1c
Thu 30 Mar 2023 03:00:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
cf04e58
Thu 30 Mar 2023 03:04:54 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:29:29: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   29 |   l->data = (void *)realloc(2*sizeof(void));
      |                             ^~~~~~~~~~~~~~
      |                             |
      |                             long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:29:21: error: too few arguments to function ‘realloc’
   29 |   l->data = (void *)realloc(2*sizeof(void));
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72ac705
Thu 30 Mar 2023 03:07:08 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b693860
Thu 30 Mar 2023 03:08:15 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4ef9655
Thu 30 Mar 2023 07:13:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:43:1: error: expected ‘(’ before ‘}’ token
   43 | }
      | ^
      | (
Compilation failed
71e071f
Thu 30 Mar 2023 07:13:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ba403aa
Thu 30 Mar 2023 07:16:09 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
2594182
Thu 30 Mar 2023 07:16:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
aa98f39
Thu 30 Mar 2023 07:16:49 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
19a3b27
Thu 30 Mar 2023 07:17:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
45a288a
Thu 30 Mar 2023 07:29:48 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
43f90c8
Thu 30 Mar 2023 07:30:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
116851d
Thu 30 Mar 2023 07:39:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f34d207
Thu 30 Mar 2023 07:39:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
49e1092
Thu 30 Mar 2023 07:40:22 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e320ab1
Thu 30 Mar 2023 07:40:46 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0981fa1
Thu 30 Mar 2023 07:41:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
3251f41
Thu 30 Mar 2023 07:59:18 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:62:27: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |   if(i < l->size) return i+l->size;
      |                          ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2faa931
Thu 30 Mar 2023 07:59:34 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 30/70
b9edf58
Thu 30 Mar 2023 08:01:46 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
e35dbfc
Thu 30 Mar 2023 08:03:35 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  8|2
total_score: 40/70
038f331
Thu 30 Mar 2023 08:03:57 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:60:3: error: ‘list’ undeclared (first use in this function)
   60 |   list->size--;
      |   ^~~~
arraylist.c:60:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d0bd140
